--- a/src/lib/assets/css/variables.css
+++ b/src/lib/assets/css/variables.css
@@ -105,6 +105,7 @@
   --spacing-s:      24px;
   --spacing-s-neg: -24px;
   --spacing-m:      40px;
+  --spacing-m-neg: -40px;
   --spacing-l:      80px;
   --spacing-xl:     88px;
   --spacing-xl-neg:-88px;
