--- a/src/lib/components/TeamCard/team-card.css
+++ b/src/lib/components/TeamCard/team-card.css
@@ -44,7 +44,7 @@
   height: auto;
 }
 .team-card:hover {
-  cursor: url(../../assets/images/icons/cursor.svg) 2 2, pointer;
+  cursor: pointer;
 }
 .team-card__photo img {
   width: 100%;
