Added "contact us" item to menu

--- a/src/lib/components/Header/header.css
+++ b/src/lib/components/Header/header.css
@@ -410,7 +410,7 @@
   }
   .navigation__list,
   .header__col {
-    gap: calc(var(--spacing-s) + var(--spacing-xxs));
+    gap: var(--spacing-s);
   }
 
   .navigation__list > li > a,
@@ -451,5 +451,12 @@
   }
   .switch-theme:after {
     background-image: url(../../assets/images/icons/switch-sun.svg);
+  }
+}
+
+@media (min-width: 1280px) {
+  .navigation__list,
+  .header__col {
+    gap: calc(var(--spacing-s) + var(--spacing-xxs));
   }
 }
