--- a/src/app.css
+++ b/src/app.css
@@ -94,7 +94,6 @@ img {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  gap: 6px;
   border-radius: 32px;
   text-decoration: none;
   font-weight: 500;
@@ -103,6 +102,10 @@ img {
   border-width: 1px;
   border-style: solid;
   cursor: pointer;
+}
+.btn span:not(.btn__icon) {
+  padding-left: 6px;
+  padding-right: 6px;
 }
 .btn.btn--primary {
   background-color: var(--orange);
@@ -118,6 +121,7 @@ img {
   border-color: var(--teal);
 }
 .btn.btn--secondary:hover {
+  border-color: transparent;
   background-color: rgba(109, 214, 211, 0.6);
 }
 .btn--outline {
@@ -126,7 +130,18 @@ img {
   background-color: transparent;
 }
 .btn.btn--outline:hover {
-  box-shadow: 0 0 1px 1px currentColor;
+  box-shadow: inset 0 0 0 1px currentColor;
+}
+.btn .btn__icon {
+  position: relative;
+  overflow: hidden;
+  width: 0;
+  margin-left: 0;
+  transition: all 0.3s;
+}
+.btn:hover .btn__icon {
+  width: 10px;
+  margin-left: var(--spacing-xs);
 }
 
 .buttons {
@@ -277,7 +292,7 @@ img {
   }
   .hero-section {
     padding-top: calc(1.5 * var(--spacing-m));
-    padding-bottom: var(--spacing-xl);
+    padding-bottom: var(--spacing-l);
   }
   .hero-section__img--dots {
     height: 240px;
@@ -311,7 +326,7 @@ img {
 @media (min-width: 1280px) {
   .hero-section {
       padding-top: var(--spacing-l);
-      padding-bottom: var(--spacing-2xl);
+      padding-bottom: var(--spacing-l);
   }
   .hero-section__img--dots {
     top: 15px;
