--- a/src/lib/components/ClientCard/client-card.css
+++ b/src/lib/components/ClientCard/client-card.css
@@ -71,7 +71,22 @@
   height: auto;
 }
 
-@media (max-width: 797px) {
+.client-card__video {
+  width: 100%;
+  height: 0;
+  padding-top: 116%;
+  position: relative;
+  overflow: hidden;
+}
+.client-card__video video {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: auto;
+}
+
+@media (max-width: 767px) {
   .client-card {
     padding-bottom: var(--spacing-m);
   }
